# agents-api

./: AGENTS.md  Makefile  README.md  go.mod  go.sum
.github/workflows/: e2e-k8s-sdk.yaml  e2e-sdk.yaml  generate-crd.yml  publish-maven-central.yml
.qoder/agents/: code-reviewer.md
agents/v1alpha1/: sandbox_types.go  sandboxclaim_types.go  sandboxset_types.go  sandboxtemplate_types.go
clients/java/: README.md  convert_models.sh  generate-java-model.sh  pom.xml
clients/python/agents_api/: .gitignore  MANIFEST.in  README.md  basic_usage.py  configuration.py  pyproject.toml  test_sandbox_client.py  test_sandboxset_client.py
clients/python/agents_api/agents_api_client/: __init__.py  base_client.py  constants.py  exceptions.py  sandbox_client.py  sandboxset_client.py
docs/: sdk-codegen-zh_CN.md  sdk-codegen.md
e2b/: README.md  README_zh-CH.md  config.go  sandbox.go  sandbox_api.go
e2b/client/: api_access_tokens.go  api_admin.go  api_api_keys.go  api_auth.go  api_default.go  api_sandboxes.go  api_snapshots.go  api_tags.go  api_templates.go  api_volumes.go  client.go  configuration.go  model__nodes_get_200_response_inner.go  model__sandboxes__sandbox_id__refreshes_post_request.go  model__sandboxes__sandbox_id__snapshots_post_request.go  model_admin_sandbox_kill_result.go  (+74 more)
hack/: boilerplate.go.txt  generate_client.sh  generate_java_sdk.sh  generate_python_sdk.sh  patch_sdk_types.sh  run-e2e-test.sh  run-k8s-sdk-e2e-test.sh  tool.go  wait-agent-sandbox-controller.sh
runtime/: README.md  README_zh-CH.md  client.go  command_handle.go  commands.go  filesystem.go
(+574 files in other folders)
